--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -273,7 +273,7 @@ Full-Width Styles
 .inner {
     position: relative;
     max-width: 1840px;
-    padding: 20px 10px;
+    /*padding: 20px 10px;*/
     margin: 0 auto;
 }
 
